--- a/publiccode.yaml
+++ b/publiccode.yaml
@@ -1,6 +1,6 @@
 publiccodeYmlVersion: "0.1"
 
-name: BRP API
+name: "Bevragen Ingeschreven Personen (BRP) API"
 url: "https://github.com/VNG-Realisatie/Haal-Centraal-BRP-bevragen"
 
 
