--- a/data/brp.yml
+++ b/data/brp.yml
@@ -2,8 +2,8 @@ collection: https://raw.githubusercontent.com/VNG-Realisatie/Haal-Centraal-BRP-b
 schemas:
   IngeschrevenPersoon:
   - properties:
-      burgerservicenummer: 999993653
-      aNummer: 8940402024
+      burgerservicenummer: "999993653"
+      aNummer: "8940402024"
       geheimhoudingPersoonsgegevens: false
       leeftijd: 36
       geslachtsaanduiding: V
