--- a/data/brp.yml
+++ b/data/brp.yml
@@ -6,7 +6,7 @@ schemas:
       aNummer: "8940402024"
       geheimhoudingPersoonsgegevens: false
       leeftijd: 36
-      geslachtsaanduiding: V
+      geslachtsaanduiding: vrouw
       datumEersteInschrijving:
         dag: 02
         datum: "2013-11-02T00:00:00.000Z"
@@ -15,4 +15,4 @@ schemas:
       kiesrecht:
         europeesKiesrecht: true
         uitgeslotenVanKiesrecht: false
-        
+
