--- a/data/brp.yml
+++ b/data/brp.yml
@@ -6,7 +6,7 @@ schemas:
       aNummer: "8940402024"
       geheimhoudingPersoonsgegevens: false
       leeftijd: 36
-      geslachtsaanduiding: V
+      geslachtsaanduiding: vrouw
       naam:
         geslachtsnaam: Moulin
         voorletters: S.
