--- a/data/brp.yml
+++ b/data/brp.yml
@@ -132,11 +132,8 @@ schemas:
 
 
           
-            
 
-      
-
-      datumEersteInschrijving:
+      datumEersteInschrijvingGBA:
         dag: 02
         datum: "2013-11-02T00:00:00.000Z"
         jaar: 2013
