--- a/data/brp.yml
+++ b/data/brp.yml
@@ -394,7 +394,7 @@ schemas:
         straat: Anna van Westrienenstr
         huisnummer: 1
         huisletter: "A"
-        postcode: 3037XT
+        postcode: 3051EG
         woonplaats: Rotterdam
         functieAdres: woonadres
         nummeraanduidingIdentificatie: "0599010000208579"
